--- a/public/calendar.css
+++ b/public/calendar.css
@@ -74,7 +74,7 @@
     height: 30px;
     vertical-align: middle;
     border-radius: 4px;
-    border: 1px solid #A0A0A0;
+    border: 1px solid #000000;
 }
 
 .calendar-day-not-current-month {
